# EDR-Ihadrs

./: .env.example  .gitignore  ARCHITECTURE.md  Install IHADRS.cmd  README.md  Uninstall IHADRS Shortcuts.cmd  pyproject.toml  requirements-dev.txt  requirements.txt
config/: mitre_mapping.yaml  playbooks.yaml  rules.yaml  schema.json  settings.yaml
docs/: FUNCTIONALITY_IMPROVEMENT_PLAN.md
scripts/windows/: Install-IHADRS.ps1  Open-IHADRS-Dashboard.ps1  Start-IHADRS.ps1  Stop-IHADRS.ps1  Uninstall-IHADRS-Shortcuts.ps1
src/ihadrs/: __init__.py  __main__.py  app.py  constants.py  exceptions.py
src/ihadrs/alerting/: __init__.py  notifier.py
src/ihadrs/api/: __init__.py  server.py
src/ihadrs/classification/: __init__.py  base_classifier.py  explainer.py  heuristic.py  ml_classifier.py  rule_classifier.py
src/ihadrs/core/: __init__.py  config.py  event_bus.py  resource_manager.py  scheduler.py
src/ihadrs/detection/: __init__.py  behavioral.py  correlation.py  engine.py  rule_engine.py
src/ihadrs/integrations/: __init__.py  secureops.py
src/ihadrs/intelligence/: __init__.py  mitre.py
src/ihadrs/logging/: logger.py
src/ihadrs/models/: __init__.py  events.py  threats.py
src/ihadrs/monitors/: auth_monitor.py  base.py  file_monitor.py  network_monitor.py  process_monitor.py  registry_monitor.py  service_monitor.py
src/ihadrs/response/: __init__.py  auto_responder.py  recommender.py
src/ihadrs/storage/: cache.py  event_store.py
src/ihadrs/ui/: app.py  main_window.py
src/ihadrs/ui/tabs/: __init__.py  alerts_tab.py  analysis_tab.py  logs_tab.py  monitor_tab.py  settings_tab.py
src/ihadrs/web/: __init__.py  server.py
src/ihadrs/web/static/css/: dashboard.css
src/ihadrs/web/static/js/: dashboard.js
src/ihadrs/web/templates/: dashboard.html
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/simulations/: simulate_bruteforce.py  simulate_c2_beacon.py  simulate_privilege_escalation.py  simulate_ransomware.py
tests/unit/: test_api.py  test_classification.py  test_config.py  test_detection.py  test_event_bus.py  test_models.py  test_monitors.py  test_response.py  test_secureops.py  test_storage.py  test_ui.py
