[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.backends.legacy:build"

# =============================================================================
# PROJECT METADATA — PEP 621
# =============================================================================
[project]
name = "ihadrs"
version = "0.1.0"
description = "Intelligent Host-Based Attack Detection and Response System — a lightweight, standalone EDR for individual users and small teams."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "IHADRS Team" }]
requires-python = ">=3.11"
keywords = [
    "security",
    "edr",
    "hids",
    "intrusion-detection",
    "mitre-attack",
    "threat-detection",
    "endpoint-security",
    "cybersecurity",
    "soc",
    "blue-team",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

# Runtime dependencies — pinned ranges (exact pins in requirements.txt)
dependencies = [
    # System monitoring
    "psutil>=5.9.6,<6.0",
    "watchdog>=3.0.0,<4.0",
    "pywin32>=306; sys_platform == 'win32'",
    "WMI>=1.5.1; sys_platform == 'win32'",

    # Machine learning
    "scikit-learn>=1.3.2,<2.0",
    "numpy>=1.26.2,<2.0",
    "joblib>=1.3.2,<2.0",

    # Configuration & validation
    "PyYAML>=6.0.1,<7.0",
    "jsonschema>=4.20.0,<5.0",
    "python-dotenv>=1.0.0,<2.0",

    # Logging
    "loguru>=0.7.2,<1.0",

    # UI — console
    "rich>=13.7.0,<14.0",

    # Alerting
    "plyer>=2.1.0,<3.0",
    "win10toast>=0.9; sys_platform == 'win32'",

    # API
    "fastapi>=0.104.1,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "pydantic>=2.5.2,<3.0",

    # CLI
    "click>=8.1.7,<9.0",
    "tqdm>=4.66.1,<5.0",

    # HTTP
    "requests>=2.31.0,<3.0",
]

[project.optional-dependencies]
# Desktop GUI — optional heavy dependency
ui = [
    "PyQt6>=6.6.1,<7.0",
    "pyqtgraph>=0.13.3,<1.0",
]

# Development tools
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",       # Parallel test execution
    "ruff>=0.1.9",                # Linter + formatter
    "mypy>=1.8.0",                # Static type checker
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
    "types-tqdm>=4.66.0",
    "black>=23.12.1",             # Code formatter
    "isort>=5.13.2",              # Import sorter
    "bandit>=1.7.6",              # Security linter
    "pre-commit>=3.6.0",
    "hypothesis>=6.92.0",         # Property-based testing
    "freezegun>=1.4.0",           # Time mocking
    "responses>=0.24.1",          # HTTP mocking
]

# Documentation
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/ihadrs/ihadrs"
Documentation = "https://ihadrs.readthedocs.io"
Repository = "https://github.com/ihadrs/ihadrs"
"Bug Tracker" = "https://github.com/ihadrs/ihadrs/issues"
Changelog = "https://github.com/ihadrs/ihadrs/blob/main/CHANGELOG.md"

[project.scripts]
# Main CLI entry point
ihadrs = "ihadrs.__main__:main"

[project.gui-scripts]
# GUI entry point (Windows)
ihadrs-ui = "ihadrs.ui.app:main"

# =============================================================================
# SETUPTOOLS CONFIGURATION
# =============================================================================
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ihadrs = [
    "py.typed",
    "ui/resources/icons/*.ico",
    "ui/resources/icons/*.png",
    "ui/resources/*.qss",
    "web/templates/*.html",
    "web/static/**/*",
]

# =============================================================================
# RUFF — Linter + Formatter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "ANN",  # flake8-annotations
    "N",    # pep8-naming
    "DTZ",  # flake8-datetimez (timezone-aware datetimes)
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "PERF", # perflint
    "FURB", # refurb
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "S101",    # Use of assert (OK in tests)
    "PLR0913", # Too many arguments — we use dataclasses heavily
    "PLR2004", # Magic value comparison — unavoidable in some detection rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "PLR2004", "ARG"]
"scripts/**/*.py" = ["S603", "S607"]  # subprocess in scripts is expected

[tool.ruff.lint.isort]
known-first-party = ["ihadrs"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY — Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "win32api",
    "win32con",
    "win32security",
    "win32service",
    "wmi",
    "win10toast",
    "psutil",
    "watchdog.*",
    "PyQt6.*",
    "pyqtgraph.*",
    "plyer",
    "sklearn.*",
    "joblib",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST — Test Runner
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=ihadrs",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "windows: marks tests as Windows-only",
    "linux: marks tests as Linux-only",
    "integration: marks integration tests",
    "simulation: marks attack simulation tests",
    "unit: marks unit tests",
    "requires_admin: marks tests requiring administrator privileges",
    "ml: marks machine learning tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE — Code Coverage
# =============================================================================
[tool.coverage.run]
source = ["src/ihadrs"]
branch = true
omit = [
    "*/tests/*",
    "*/ui/*",       # UI code excluded from coverage
    "*/__main__.py",
    "*/migrations/*",
    "*/web/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
show_missing = true
precision = 2

# =============================================================================
# BANDIT — Security Linter
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = [
    "B101",  # assert_used — fine in tests
    "B324",  # md5 — we use it for non-security hashing (file IDs)
]
severity = "medium"

# =============================================================================
# BLACK — Code Formatter (used alongside ruff format)
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | dist
  | build
  | htmlcov
)/
'''

# =============================================================================
# ISORT — Import Sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ihadrs"]
skip_gitignore = true